Prima approccio a PCA/SVD. - Riscontrato problema con le emoji.

--- a/AnalisiDati.ipynb
+++ b/AnalisiDati.ipynb
@@ -67,8 +67,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-12-05T23:58:58.398160Z",
-     "start_time": "2025-12-05T23:58:58.328817Z"
+     "end_time": "2025-12-06T01:18:31.606631Z",
+     "start_time": "2025-12-06T01:18:31.556926Z"
     }
    },
    "source": [
@@ -148,18 +148,18 @@
        "</div>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 8
+   "execution_count": 1
   },
   {
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## Esplorazione del DataFrame\n",
+    "## Verifica integrità dati\n",
     "Controllo valori unici nelle colonne 'parola' ed 'emozione' per confermare che il dataset sia stato caricato correttamente."
    ],
    "id": "48d202cf4f04833"
@@ -167,8 +167,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-06T00:07:19.799815Z",
-     "start_time": "2025-12-06T00:07:19.780977Z"
+     "end_time": "2025-12-06T01:18:31.692908Z",
+     "start_time": "2025-12-06T01:18:31.676042Z"
     }
    },
    "cell_type": "code",
@@ -189,7 +189,7 @@
      ]
     }
    ],
-   "execution_count": 16
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -200,8 +200,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-06T00:08:40.484708Z",
-     "start_time": "2025-12-06T00:08:40.449389Z"
+     "end_time": "2025-12-06T01:18:31.879853Z",
+     "start_time": "2025-12-06T01:18:31.868972Z"
     }
    },
    "cell_type": "code",
@@ -219,7 +219,7 @@
      ]
     }
    ],
-   "execution_count": 17
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -233,8 +233,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-06T00:09:37.088249Z",
-     "start_time": "2025-12-06T00:09:37.045Z"
+     "end_time": "2025-12-06T01:18:31.978430Z",
+     "start_time": "2025-12-06T01:18:31.935853Z"
     }
    },
    "cell_type": "code",
@@ -399,12 +399,12 @@
        "</div>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 18
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -418,15 +418,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-06T00:15:36.771208Z",
-     "start_time": "2025-12-06T00:15:36.726730Z"
+     "end_time": "2025-12-06T01:18:32.221923Z",
+     "start_time": "2025-12-06T01:18:32.165606Z"
     }
    },
    "cell_type": "code",
    "source": "pivotedData.to_csv(\"ELIta_INTENSITY_Matrix.csv\")",
    "id": "da955f1dcc950874",
    "outputs": [],
-   "execution_count": 21
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -437,8 +437,300 @@
   {
    "metadata": {},
    "cell_type": "markdown",
+   "source": [
+    "# Visualizzazione tramite Riduzione Dimensionale (PCA e TruncatedSVD).\n",
+    "La matrice a 13 dimensioni (8 emozioni + 2 extra + 3 VAD) appena creata verrà schiacciata in 2 dimensioni per poterla disegnare su un piano 2D."
+   ],
+   "id": "ac67d2f48e03d481"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Preparazione specifica per la visualizzazione\n",
+    "Prima di dare i dati in pasto agli algoritmi, dobbiamo fare due cose importanti:\n",
+    "\n",
+    "1. **Selezionare le feature**: per la visualizzazione delle \"parole in base all'emozione\", è meglio usare:\n",
+    "    - prima, solo le 8 emozioni di base di Plutchik.\n",
+    "    - sucessivamente, aggiungere le 2 emozioni extra (amore e neutrale).\n",
+    "    - infine, le 3 dimensioni VAD.\n",
+    "\n",
+    "    Le analisi verranno fatte separatamente per ogni set di feature. Non calcoliamo la riduzione dimensionale su tutte le feature insieme perché emozioni e dimensioni VAD sono su due scale diverse e mescolarle potrebbe distorcere i risultati.\n",
+    "2. **Gestire le emoji**: il lessico contiene sia parole testuali che emoji. Per una visualizzazione più chiara, è meglio separare le due categorie e fare analisi distinte.\n",
+    "    - Prima analizzeremo solo le parole.\n",
+    "    - Poi faremo un'analisi separata per le emoji.\n",
+    "\n",
+    "3. *Calcolare l'emozione dominante**: ci serve per colorare i punti nel grafico (es. colorare di rosso le parole di \"rabbia\")."
+   ],
+   "id": "2204cf2cde2384b3"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-06T01:18:32.273287Z",
+     "start_time": "2025-12-06T01:18:32.266082Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "basic_emotions = ['gioia', 'fiducia', 'paura', 'sorpresa', 'tristezza', 'disgusto', 'rabbia', 'aspettativa']\n",
+    "\n",
+    "X = pivotedData[basic_emotions].fillna(0)\n",
+    "\n",
+    "dominant_emotion = X.idxmax(axis=1) # Trova l'emozione con il valore più alto per ogni parola\n",
+    "\n",
+    "print(\"Matrice X creata. Dimensioni:\", X.shape)\n",
+    "print(\"Emozioni dominanti calcolate.\")"
+   ],
+   "id": "6a974cd883d00feb",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrice X creata. Dimensioni: (6905, 8)\n",
+      "Emozioni dominanti calcolate.\n"
+     ]
+    }
+   ],
+   "execution_count": 6
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Separazione dei Dati (Emoji vs Parole)",
+   "id": "6519e0db67914e54"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-06T01:18:32.419419Z",
+     "start_time": "2025-12-06T01:18:32.339244Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import emoji\n",
+    "\n",
+    "def is_likely_emoji(text):\n",
+    "    return emoji.emoji_count(str(text)) > 0\n",
+    "\n",
+    "pivotedData['is_emoji'] = [is_likely_emoji(x) for x in pivotedData.index]\n",
+    "\n",
+    "df_only_emojis = pivotedData[pivotedData['is_emoji'] == True].copy()\n",
+    "df_only_words = pivotedData[pivotedData['is_emoji'] == False].copy()\n",
+    "\n",
+    "print(f\"Totale elementi: {len(pivotedData)}\")\n",
+    "print(f\"Numero di Emoji trovate: {len(df_only_emojis)}\")\n",
+    "print(f\"Numero di Parole testuali: {len(df_only_words)}\")"
+   ],
+   "id": "f08410358383b745",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Totale elementi: 6905\n",
+      "Numero di Emoji trovate: 186\n",
+      "Numero di Parole testuali: 6719\n"
+     ]
+    }
+   ],
+   "execution_count": 7
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Visualizzazione delle Emoji (PCA)\n",
+   "id": "c7e0ef8a307619ac"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-06T01:19:56.110206Z",
+     "start_time": "2025-12-06T01:19:55.736957Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from matplotlib import rcParams\n",
+    "\n",
+    "# Utilizzare un font che supporti meglio le emoji\n",
+    "import matplotlib.font_manager as fm\n",
+    "\n",
+    "# Trovare un font con supporto emoji\n",
+    "font_path = \"/System/Library/Fonts/Apple Color Emoji.ttf\"  # Esempio per macOS\n",
+    "if os.path.exists(font_path):\n",
+    "    fm.fontManager.addfont(font_path)\n",
+    "    font_name = fm.FontProperties(fname=font_path).get_name()\n",
+    "    plt.rcParams['font.family'] = font_name\n",
+    "\n",
+    "# 1. Preparazione Dati Emoji\n",
+    "basic_emotions = ['gioia', 'fiducia', 'paura', 'sorpresa', 'tristezza', 'disgusto', 'rabbia', 'aspettativa']\n",
+    "X_em = df_only_emojis[basic_emotions].fillna(0)\n",
+    "\n",
+    "# Standardizzazione\n",
+    "scaler_em = StandardScaler()\n",
+    "X_em_scaled = scaler_em.fit_transform(X_em)\n",
+    "\n",
+    "# 2. PCA sulle Emoji\n",
+    "pca_em = PCA(n_components=2)\n",
+    "coords_em = pca_em.fit_transform(X_em_scaled)\n",
+    "\n",
+    "df_pca_em = pd.DataFrame(data=coords_em, columns=['PC1', 'PC2'])\n",
+    "df_pca_em['emoji'] = df_only_emojis.index\n",
+    "# Ricalcoliamo l'emozione dominante solo per questo subset\n",
+    "df_pca_em['emozione_dominante'] = X_em.idxmax(axis=1).values\n",
+    "\n",
+    "# 3. Grafico SOLO EMOJI\n",
+    "plt.figure(figsize=(12, 10))\n",
+    "\n",
+    "# IMPOSTAZIONE FONT PER MAC (Cruciale per vedere le faccine)\n",
+    "plt.rcParams['font.family'] = 'Arial Unicode MS' \n",
+    "\n",
+    "# Scatterplot base (i punti colorati)\n",
+    "sns.scatterplot(\n",
+    "    x='PC1', y='PC2', \n",
+    "    hue='emozione_dominante', \n",
+    "    data=df_pca_em, \n",
+    "    palette='tab10', \n",
+    "    s=100, # Punti più grandi\n",
+    "    alpha=0.4 # Trasparenti\n",
+    ")\n",
+    "\n",
+    "# Aggiungiamo le Emoji come testo sopra i punti\n",
+    "# Stampiamo TUTTE le emoji perché sono poche (rispetto alle 6000 parole)\n",
+    "for i in range(len(df_pca_em)):\n",
+    "    plt.text(\n",
+    "        df_pca_em.PC1[i], \n",
+    "        df_pca_em.PC2[i], \n",
+    "        df_pca_em.emoji[i], \n",
+    "        fontsize=14, # Grandezza emoji\n",
+    "        ha='center', va='center'\n",
+    "    )\n",
+    "\n",
+    "plt.title('Spazio Semantico: Analisi specifica delle Emoji', fontsize=16)\n",
+    "plt.xlabel(f'PC1 ({pca_em.explained_variance_ratio_[0]:.1%})')\n",
+    "plt.ylabel(f'PC2 ({pca_em.explained_variance_ratio_[1]:.1%})')\n",
+    "plt.legend(bbox_to_anchor=(1.02, 1), loc='upper left', title=\"Emozione Dominante\")\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ],
+   "id": "3d3062495fa9b872",
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[9], line 12\u001B[0m\n\u001B[1;32m     10\u001B[0m \u001B[38;5;66;03m# Trovare un font con supporto emoji\u001B[39;00m\n\u001B[1;32m     11\u001B[0m font_path \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m/System/Library/Fonts/Apple Color Emoji.ttf\u001B[39m\u001B[38;5;124m\"\u001B[39m  \u001B[38;5;66;03m# Esempio per macOS\u001B[39;00m\n\u001B[0;32m---> 12\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[43mos\u001B[49m\u001B[38;5;241m.\u001B[39mpath\u001B[38;5;241m.\u001B[39mexists(font_path):\n\u001B[1;32m     13\u001B[0m     fm\u001B[38;5;241m.\u001B[39mfontManager\u001B[38;5;241m.\u001B[39maddfont(font_path)\n\u001B[1;32m     14\u001B[0m     font_name \u001B[38;5;241m=\u001B[39m fm\u001B[38;5;241m.\u001B[39mFontProperties(fname\u001B[38;5;241m=\u001B[39mfont_path)\u001B[38;5;241m.\u001B[39mget_name()\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'os' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 9
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Visualizzazione delle Parole (PCA e TruncatedSVD)\n",
+   "id": "2f6df02724898cc3"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Standardizzazione e Applicazione della PCA\n",
+    "La PCA richiede che i dati siano centrati (media 0) e scalati (varianza unitaria)."
+   ],
+   "id": "8fbcf4593a95e7c7"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-06T01:18:34.045090Z",
+     "start_time": "2025-12-06T01:18:34.043453Z"
+    }
+   },
+   "cell_type": "code",
    "source": "",
-   "id": "fe8831aef609b909"
+   "id": "2319d5e407a6ee8a",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Visualizzazione PCA (Il Grafico)\n",
+   "id": "bbdf12d676181e28"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-06T01:18:34.080998Z",
+     "start_time": "2025-12-06T01:18:34.078850Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "cfe8261a1bca8ac1",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Applicazione di TruncatedSVD\n",
+    "La TruncatedSVD è un'alternativa alla PCA che può essere più efficiente per matrici sparse."
+   ],
+   "id": "7412daea74815f0d"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-06T01:18:34.114963Z",
+     "start_time": "2025-12-06T01:18:34.113347Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "7e0b2834a2911d95",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Interpretazione\n",
+    "La visualizzazione PCA e SVD mostra come le parole si raggruppano in base alle emozioni predominanti.\n",
+    "Le parole con emozioni simili tendono a essere vicine nello spazio 2D, indicando che il lessico ELIta cattura efficacemente le relazioni semantiche basate sulle emozioni.\n",
+    "Analizzando i cluster, possiamo osservare:\n",
+    "* Cluster di \"gioia\" e \"fiducia\" spesso vicini, riflettendo emozioni positive correlate.\n",
+    "* Cluster di \"rabbia\", \"disgusto\" e \"paura\" che tendono a raggrupparsi, indicando emozioni negative correlate.\n"
+   ],
+   "id": "30e9b78cc9bf953c"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-06T01:18:34.152150Z",
+     "start_time": "2025-12-06T01:18:34.149798Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "6c5788a4763398ea",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
