Dovrebbe vedersi con nbviewr

--- a/Visualizzazione/AnalisiParole.ipynb
+++ b/Visualizzazione/AnalisiParole.ipynb
@@ -22,14 +22,16 @@
    "cell_type": "code",
    "id": "f08410358383b745",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-12-10T20:56:11.064711Z",
-     "start_time": "2025-12-10T20:56:10.969938Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "source": [
     "import pandas as pd\n",
     "import emoji\n",
+    "import plotly.io as pio\n",
+    "\n",
+    "pio.renderers.default = \"notebook_connected\"\n",
     "\n",
     "pivotedData = pd.read_csv(\"ELIta_INTENSITY_Matrix.csv\", index_col=0)\n",
     "\n",
@@ -45,25 +47,15 @@
     "print(f\"Numero di Emoji trovate: {len(df_only_emojis)}\")\n",
     "print(f\"Numero di Parole testuali: {len(df_only_words)}\")"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Totale elementi: 6905\n",
-      "Numero di Emoji trovate: 186\n",
-      "Numero di Parole testuali: 6719\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
    "id": "9f2eb122c9381ea5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-10T20:56:11.091046Z",
+     "end_time": "2025-12-10T21:49:44.345358Z",
      "start_time": "2025-12-10T20:56:11.075051Z"
     }
    },
@@ -245,7 +237,7 @@
    "id": "46353245100c8f3f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-10T20:56:11.273083Z",
+     "end_time": "2025-12-10T21:49:44.369097Z",
      "start_time": "2025-12-10T20:56:11.261527Z"
     }
    },
@@ -441,7 +433,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-10T20:56:12.292558Z",
+     "end_time": "2025-12-10T21:49:44.372644Z",
      "start_time": "2025-12-10T20:56:11.458208Z"
     }
    },
@@ -474,7 +466,7 @@
    "id": "3d3062495fa9b872",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-10T20:56:14.568738Z",
+     "end_time": "2025-12-10T21:49:44.372982Z",
      "start_time": "2025-12-10T20:56:12.377185Z"
     }
    },
@@ -8299,7 +8291,7 @@
    "id": "bd903d19539c60ae",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-10T20:56:14.694050Z",
+     "end_time": "2025-12-10T21:49:44.373175Z",
      "start_time": "2025-12-10T20:56:14.617023Z"
     }
    },
@@ -16125,7 +16117,7 @@
    "id": "366c9e3b593559f5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-10T20:56:14.874434Z",
+     "end_time": "2025-12-10T21:49:44.373303Z",
      "start_time": "2025-12-10T20:56:14.807965Z"
     }
    },
@@ -24006,7 +23998,7 @@
    "id": "8ab9aa1ca164780c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-10T20:56:14.946407Z",
+     "end_time": "2025-12-10T21:49:44.373441Z",
      "start_time": "2025-12-10T20:56:14.884625Z"
     }
    },
@@ -31882,7 +31874,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-10T20:56:15.199886Z",
+     "end_time": "2025-12-10T21:49:44.373738Z",
      "start_time": "2025-12-10T20:56:15.100889Z"
     }
    },
@@ -39719,7 +39711,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-10T20:56:16.268281Z",
+     "end_time": "2025-12-10T21:49:44.374256Z",
      "start_time": "2025-12-10T20:56:15.918736Z"
     }
    },
@@ -39782,7 +39774,7 @@
    "id": "e49463975dbfeb98",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-10T20:56:16.516929Z",
+     "end_time": "2025-12-10T21:49:44.374572Z",
      "start_time": "2025-12-10T20:56:16.312493Z"
     }
    },
@@ -47847,7 +47839,7 @@
    "id": "17533bae21e41e09",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-10T20:56:59.607880Z",
+     "end_time": "2025-12-10T21:49:44.374751Z",
      "start_time": "2025-12-10T20:56:16.794861Z"
     }
    },
@@ -55666,7 +55658,7 @@
    "id": "6acc964e2eec365d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-10T20:57:37.189063Z",
+     "end_time": "2025-12-10T21:49:44.374931Z",
      "start_time": "2025-12-10T20:56:59.966837Z"
     }
    },
@@ -63485,7 +63477,7 @@
    "id": "2590ec9e29490f1e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-10T20:58:16.210902Z",
+     "end_time": "2025-12-10T21:49:44.375194Z",
      "start_time": "2025-12-10T20:57:37.495709Z"
     }
    },
@@ -71312,7 +71304,7 @@
    "id": "4fd609e8700c514a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-10T20:58:17.274801Z",
+     "end_time": "2025-12-10T21:49:44.375366Z",
      "start_time": "2025-12-10T20:58:16.954564Z"
     }
    },
@@ -79350,7 +79342,7 @@
    "id": "6e392c021408d05b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-10T20:58:17.888048Z",
+     "end_time": "2025-12-10T21:49:44.375714Z",
      "start_time": "2025-12-10T20:58:17.703309Z"
     }
    },
@@ -87337,7 +87329,7 @@
    "id": "376665cc4503f886",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-10T20:58:18.142909Z",
+     "end_time": "2025-12-10T21:49:44.375989Z",
      "start_time": "2025-12-10T20:58:17.904895Z"
     }
    },
