--- a/Visualizzazione/AnalisiPerEmozione.ipynb
+++ b/Visualizzazione/AnalisiPerEmozione.ipynb
@@ -39,6 +39,9 @@
     "from Visualizzazione.emotion_config import EMOTION_COLORS, BASIC_EMOTIONS\n",
     "from Visualizzazione.pca_utils import perform_pca_analysis\n",
     "from Visualizzazione.visualizer import plot_pca_single\n",
+    "import plotly.io as pio\n",
+    "\n",
+    "pio.renderers.default = \"notebook_connected\"\n",
     "\n",
     "pivotedData = pd.read_csv(\"ELIta_INTENSITY_Matrix.csv\", index_col=0)\n",
     "\n",
